updated swagger.yaml
